--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -40,18 +40,26 @@
 		position: relative;
 		background: #fff7f3;
 		border-radius: 100px;
-		padding: 11px 28px;
+		padding: 0px 10px;
+		
 		display: flex;
 		align-items: center;
 		gap: 12px;
 		max-width: 215px;
 	}
+	&__button-search {
 
+	}
 	&__input {
+		padding-block: 11px;
 		font-weight: 600;
 		font-size: 16px;
+		padding-left: 5px;
 		&::placeholder {
 			color: #f95707;
+		}
+		&:focus {
+			outline: 1px solid #f95707
 		}
 	}
 
